--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Registration</title>
+    <title>Kayıt Ol</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -19,56 +19,89 @@
     <![endif]-->
 </head>
 <body>
-
-<div class="container">
-    <div>
-        <nav class="navbar navbar-light" style="background-color: cornflowerblue;">
-            <img src="https://www.google.com/search?sxsrf=ALeKk01XqfweCP-pTa2WhjKb7YLDGWRWDg:1610985686277&source=univ&tbm=isch&q=ankara+%C3%BCniversitesi+logo+jpg&hl=tr&sa=X&ved=2ahUKEwix5MWs7aXuAhURHxoKHXHUB1gQjJkEegQIBhAB&biw=1336&bih=939#imgrc=h0FdE8YmIMI9tM"
+        <nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
+            <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
                  width="70" height="70" alt=""
                  style="margin-left: 10px; margin-right: 200px"/>
-            <h3 style="margin-top: -60px; margin-left: 500px">ARVED</h3>
+            <h3 style="margin-top: -50px; margin-left: 600px; color: white">ARVED</h3>
         </nav>
-        <form class="form-horizontal" method="post" style="margin-top: 60px; margin-right: 300px; margin-left: 200px">
-            <h3 style="margin-left: 300px">Kaydol</h3>
+
+        <nav class="navbar navbar-light" style="margin-top:15px; margin-left:400px; margin-right:400px; border-color: gainsboro">
+        <form class="form-horizontal" method="post" style="margin-top: 50px; max-width: 500px; margin-right: 60px; margin-left: 0px">
+            <h3 style="margin-left: 220px">Kaydol</h3>
+            <div>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+            </div>
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label"></label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="name" name="name"
-                           placeholder="Enter name">
+                           placeholder="İsim">
                 </div>
+            </div>
+            <div><h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
             </div>
             <div class="form-group">
                 <label for="surname" class="col-sm-2 control-label"></label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="surname" name="surname"
-                           placeholder="Enter surname">
+                           placeholder="Soyisim">
                 </div>
+            </div>
+            <div>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
             </div>
             <div class="form-group">
                 <label for="email" class="col-sm-2 control-label"></label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="email" name="email"
-                           placeholder="Enter email">
+                           placeholder="Email">
                 </div>
+            </div>
+            <div>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
             </div>
             <div class="form-group">
                 <label for="password" class="col-sm-2 control-label"></label>
                 <div class="col-sm-10">
                     <input type="password" class="form-control" id="password" name="password"
-                           placeholder="Enter password">
+                           placeholder="Şifre">
                 </div>
+            </div>
+            <div>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
+                <h1></h1>
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit"
-                            style="width: 529px; margin-right: 400px; margin-left: 0; color: white; color-rendering: auto; background-color: gray"
+                            style="margin-left:140px; color: white; color-rendering: auto; background-color: #428bca"
                             class="btn btn-default">Kayıt Ol
                     </button>
                 </div>
             </div>
         </form>
-    </div>
-</div>
+        </nav>
+
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
