--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Home</title>
+    <title>Personel Bilgileri</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -23,33 +23,47 @@
 </head>
 <body>
 
-<div class="container">
-    <nav class="navbar navbar-light" style="background-color: cornflowerblue;">
-        <img src="https://www.google.com/search?sxsrf=ALeKk01XqfweCP-pTa2WhjKb7YLDGWRWDg:1610985686277&source=univ&tbm=isch&q=ankara+%C3%BCniversitesi+logo+jpg&hl=tr&sa=X&ved=2ahUKEwix5MWs7aXuAhURHxoKHXHUB1gQjJkEegQIBhAB&biw=1336&bih=939#imgrc=h0FdE8YmIMI9tM"
+    <nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
+        <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
              width="70" height="70" alt=""
              style="margin-left: 10px; margin-right: 200px"/>
-        <h3 style="margin-top: -60px; margin-left: 500px">ARVED</h3>
+        <h3 style="margin-top: -50px; margin-left: 600px; color: white">ARVED</h3>
+    </nav>
+    <nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
+        <div class="input-group rounded" style="width: 500px; margin: auto; margin-top: 15px">
+            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+                   aria-describedby="search-addon" />
+            <span class="input-group-text border-0" id="search-addon">
+                <i class="fas fa-search"></i>
+            </span>
+        </div>
+        <div class="dropdown" style="max-width: 400px; margin-top: -40px; margin-left: 1060px">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="true">
+                <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                <ul class="nav navbar" sec:authorize="isAuthenticated()" >
+                    <form th:action="@{/logout}" method="post">
+                        <button class="btn btn-default" type="submit" value="Logout">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
+                                <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
+                                <path fill-rule="evenodd"
+                                      d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
+                            </svg>
+                            Çıkış
+                        </button>
+                    </form>
+                </ul>
+            </ul>
+        </div>
     </nav>
 
-    <ul class="nav navbar-right" sec:authorize="isAuthenticated()" style="max-width: 400px; margin-top: 10px; margin-right: 0px">
-        <form th:action="@{/logout}" method="post">
-            <button class="btn btn-default" type="submit" value="Logout">
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
-                    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
-                    <path fill-rule="evenodd"
-                          d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
-                </svg>
-                Logout
-            </button>
-        </form>
-    </ul>
-
-    <div class="table table-bordered" style="margin-top: 100px">
-        <a th:href="@{'/update/'}" target="_blank" class="btn btn-primary">
-            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Update</a>
+    <div class="table table-bordered" style="margin-top: 50px; width: 910px; margin-right: 200px; margin-left: 200px">
         <table class="table table-hover">
             <thead>
             <tr>
@@ -67,28 +81,84 @@
                 <td th:text="${info.scopusHIndex}">Table cell</td>
                 <td th:text="${info.scopusAtifSayisi}">Table cell</td>
                 <td th:text="${info.uzmanlikAlani}">Table cell</td>
-                <!--td><a th:href="@{'/customers/update/' + ${customer.id}}" target="_blank" class="btn btn-success">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Update</a></td-->
-                <!--td>
-                    <form th:action="@{/customers/} + ${customer.id}" th:method="delete">
+                <td><a th:href="@{'/updateInformation'}" target="_blank" class="btn btn-primary">
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Güncelle</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="table table-bordered" style="margin-top: 50px; width: 910px; margin-right: 200px; margin-left: 200px">
+        <div class="row">
+            <div class="col-md-12">
+                <a href="/addArticle" class="btn btn-default" style="margin-right: auto">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Makale Ekle</a>
+            </div>
+        </div>
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <!--th>ID</th-->
+                <th>Başlık</th>
+                <th>Tarih</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="article: ${articles}">
+                <!--td th:text="${article.id}">Table cell</td-->
+                <td th:text="${article.baslik}">Table cell</td>
+                <td th:text="${article.tarih}">Table cell</td>
+                <td><a th:href="@{'/updateArticle/' + ${article.id}}" target="_blank" class="btn btn-primary">
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Güncelle</a></td>
+                <td>
+                    <form th:action="@{/articles/} + ${article.id}" th:method="delete">
                         <button class="btn btn-danger" type="submit">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Delete
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Sil
                         </button>
                     </form>
-                </td-->
+                </td>
             </tr>
 
             </tbody>
         </table>
-
-        <!--nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Products</li>
-            </ol>
-        </nav-->
     </div>
-</div>
+    <div class="table table-bordered" style="margin-top: 50px; width: 910px; margin-right: 200px; margin-left: 200px">
+        <div class="row">
+            <div class="col-md-12">
+                <a href="/addProject" class="btn btn-default">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Proje Ekle</a>
+            </div>
+        </div>
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Proje Adı</th>
+                <th>Proje Türü</th>
+                <th>Proje Durumu</th>
+                <th>Projenin Amacı</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="project: ${projects}">
+                <td th:text="${project.projeTuru}">Table cell</td>
+                <td th:text="${project.projeDurumu}">Table cell</td>
+                <td th:text="${project.projeninAmaci}">Table cell</td>
+
+                <td><a th:href="@{'/updateProject/' + ${project.id}}" target="_blank" class="btn btn-primary" style="margin-right: 0px">
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Güncelle</a></td>
+                <td>
+                    <form th:action="@{/projects/} + ${project.id}" th:method="delete">
+                        <button class="btn btn-danger" type="submit">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Sil
+                        </button>
+                    </form>
+                </td>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"
