article add and update

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,89 +18,92 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-        <nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
-            <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
-                 width="70" height="70" alt=""
-                 style="margin-left: 10px; margin-right: 200px"/>
-            <h3 style="margin-top: -50px; margin-left: 600px; color: white">ARVED</h3>
-        </nav>
+<body class="container-fluid">
+<nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
+    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
+         width="70" height="70" alt=""
+         style="margin-left: 10px; margin-right: 200px"/>
+    <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: -60px">ARVED</p>
+    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
+         width="70" height="70" alt=""
+         style="margin-left: 1670px; margin-top: -80px"/>
+</nav>
 
-        <nav class="navbar navbar-light" style="margin-top:15px; margin-left:400px; margin-right:400px; border-color: gainsboro">
-        <form class="form-horizontal" method="post" style="margin-top: 50px; max-width: 500px; margin-right: 60px; margin-left: 0px">
-            <h3 style="margin-left: 220px">Kaydol</h3>
-            <div>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
+<nav class="navbar navbar-light" style="margin-top:70px; margin-left:600px; margin-right:600px; border-color: gainsboro">
+    <form class="form-horizontal" method="post" style="margin-top: 50px; max-width: 500px; margin-right: 60px; margin-left: 0px">
+        <h3 style="margin-left: 230px">Kayıt Ol</h3>
+        <div>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+        </div>
+        <div class="form-group">
+            <label for="name" class="col-sm-2 control-label"></label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="name" name="name"
+                       placeholder="İsim">
             </div>
-            <div class="form-group">
-                <label for="name" class="col-sm-2 control-label"></label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" name="name"
-                           placeholder="İsim">
-                </div>
+        </div>
+        <div><h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+        </div>
+        <div class="form-group">
+            <label for="surname" class="col-sm-2 control-label"></label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="surname" name="surname"
+                       placeholder="Soyisim">
             </div>
-            <div><h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
+        </div>
+        <div>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+        </div>
+        <div class="form-group">
+            <label for="email" class="col-sm-2 control-label"></label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="email" name="email"
+                       placeholder="Email">
             </div>
-            <div class="form-group">
-                <label for="surname" class="col-sm-2 control-label"></label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="surname" name="surname"
-                           placeholder="Soyisim">
-                </div>
+        </div>
+        <div>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+        </div>
+        <div class="form-group">
+            <label for="password" class="col-sm-2 control-label"></label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="password" name="password"
+                       placeholder="Şifre">
             </div>
-            <div>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
+        </div>
+        <div>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+            <h1></h1>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit"
+                        style="margin-left:150px; color: white; color-rendering: auto; background-color: #428bca"
+                        class="btn btn-default">Kayıt Ol
+                </button>
             </div>
-            <div class="form-group">
-                <label for="email" class="col-sm-2 control-label"></label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="email" name="email"
-                           placeholder="Email">
-                </div>
-            </div>
-            <div>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-2 control-label"></label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="password" name="password"
-                           placeholder="Şifre">
-                </div>
-            </div>
-            <div>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-                <h1></h1>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit"
-                            style="margin-left:140px; color: white; color-rendering: auto; background-color: #428bca"
-                            class="btn btn-default">Kayıt Ol
-                    </button>
-                </div>
-            </div>
-        </form>
-        </nav>
+        </div>
+    </form>
+</nav>
 
 
 
