--- a/src/main/resources/templates/addArticle.html
+++ b/src/main/resources/templates/addArticle.html
@@ -18,134 +18,132 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-    <nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
-        <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
-             width="70" height="70" alt=""
-             style="margin-left: 10px; margin-right: 200px"/>
-        <h3 style="margin-top: -50px; margin-left: 600px; color: white">ARVED</h3>
-    </nav>
-    <nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
-        <div class="input-group rounded" style="width: 500px; margin: auto; margin-top: 15px">
-            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-                   aria-describedby="search-addon" />
-            <span class="input-group-text border-0" id="search-addon">
+<body class="container-fluid">
+<nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
+    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
+         width="70" height="70" alt=""
+         style="margin-left: 10px; margin-right: 200px"/>
+    <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: -60px">ARVED</p>
+    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
+         width="70" height="70" alt=""
+         style="margin-left: 1670px; margin-top: -80px"/>
+</nav>
+<nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
+    <div class="input-group rounded" style="width: 500px; margin: auto; margin-top: 15px">
+        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+               aria-describedby="search-addon" />
+        <span class="input-group-text border-0" id="search-addon">
                 <i class="fas fa-search"></i>
             </span>
-        </div>
-        <div class="dropdown" style="max-width: 400px; margin-top: -40px; margin-left: 1060px">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="true">
-                <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                <span class="caret"></span>
+    </div>
+    <ul class="nav navbar" sec:authorize="isAuthenticated()" >
+        <form th:action="@{/logout}" method="post" style="max-width: 400px; margin-top: -35px; margin-left: 1660px">
+            <button class="btn btn-default" type="submit" value="Logout">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
+                    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
+                    <path fill-rule="evenodd"
+                          d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
+                </svg>
+                Çıkış
             </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <ul class="nav navbar" sec:authorize="isAuthenticated()" >
-                    <form th:action="@{/logout}" method="post">
-                        <button class="btn btn-default" type="submit" value="Logout">
-                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd"
-                                      d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
-                                <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
-                                <path fill-rule="evenodd"
-                                      d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
-                            </svg>
-                            Çıkış
-                        </button>
-                    </form>
-                </ul>
-            </ul>
-        </div>
-    </nav>
-
-    <nav class="navbar navbar-light" style="margin-top:15px; margin-left:200px; margin-right:200px; border-color: gainsboro">
-        <h4 style="margin-top: 30px; margin-left: 20px; margin-right: 20px; border-bottom-color: gainsboro; border-bottom-style: solid">Makale Bilgileri</h4>
-        <form class="form-horizontal" method="post" style="max-width:700px; margin-top: 80px; margin-left: auto; margin-right: auto">
-            <div class="form-group">
-                <label for="yayinTuru" class="col-sm-2 control-label">Yayın Türü</label>
-                <select class="form-control" id="yayinTuru" name="yayinTuru" style="max-width: 576px; margin: 0 auto">
-                    <option>Ulusal Makale</option>
-                    <option>Ulusal Bildiri</option>
-                    <option>Uluslararası Makale</option>
-                    <option>Uluslararası Bildiri</option>
-                    <option>Patent</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="endeksTuru" class="col-sm-2 control-label">Endeks Türü</label>
-                <select class="form-control" id="endeksTuru" name="endeksTuru" style="max-width: 576px; margin: 0 auto">
-                    <option>SCI</option>
-                    <option>SCI-E</option>
-                    <option>SSCI</option>
-                    <option>A&HCI</option>
-                    <option>Scopus</option>
-                    <option>Diğer</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="baslik" class="col-sm-2 control-label">Başlık</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="baslik" name="baslik" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="yazarlar" class="col-sm-2 control-label">Yazarlar</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="yazarlar" name="yazarlar" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="date" class="col-sm-2 control-label">Tarih</label>
-                <div class="col-sm-10">
-                    <input type="date" class="form-control" id="date" name="date" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="dergiAdi" class="col-sm-2 control-label">Dergi Adı</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="dergiAdi" name="dergiAdi" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="konferans" class="col-sm-2 control-label">Konferans</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="konferans" name="konferans" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="cilt" class="col-sm-2 control-label">Cilt</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" id="cilt" name="cilt" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="sayi" class="col-sm-2 control-label">Sayi</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" id="sayi" name="sayi" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="sayfa" class="col-sm-2 control-label">Sayfa</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" id="sayfa" name="sayfa" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="doi" class="col-sm-2 control-label">DOİ</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="doi" name="doi" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default"
-                            style="color: white; color-rendering: auto; background-color: #428bca">Kaydet
-                    </button>
-                </div>
-            </div>
         </form>
-    </nav>
+    </ul>
+</nav>
+
+<nav class="navbar navbar-light" style="margin-top:70px; margin-left:300px; margin-right:300px; border-color: gainsboro">
+    <h4 style="margin-top: 30px; margin-left: 20px; margin-right: 20px; border-bottom-color: gainsboro; border-bottom-style: solid">Makale Bilgileri</h4>
+    <form class="form-horizontal" method="post" style="max-width:700px; margin-top: 80px; margin-left: auto; margin-right: auto">
+        <div class="form-group">
+            <label for="yayinTuru" class="col-sm-2 control-label">Yayın Türü</label>
+            <select class="form-control" id="yayinTuru" name="yayinTuru" style="max-width: 576px; margin: 0 auto">
+                <option>Ulusal Makale</option>
+                <option>Ulusal Bildiri</option>
+                <option>Uluslararası Makale</option>
+                <option>Uluslararası Bildiri</option>
+                <option>Patent</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="endeksTuru" class="col-sm-2 control-label">Endeks Türü</label>
+            <select class="form-control" id="endeksTuru" name="endeksTuru" style="max-width: 576px; margin: 0 auto">
+                <option>SCI</option>
+                <option>SCI-E</option>
+                <option>SSCI</option>
+                <option>A&HCI</option>
+                <option>Scopus</option>
+                <option>Diğer</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="baslik" class="col-sm-2 control-label">Başlık</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="baslik" name="baslik" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="yazarlar" class="col-sm-2 control-label">Yazarlar</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="yazarlar" name="yazarlar" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="yil" class="col-sm-2 control-label">Yıl</label>
+            <select class="form-control" id="yil" name="yil" style="max-width: 576px; margin: 0 auto">
+                <option>2021</option>
+                <option>2020</option>
+                <option>2019</option>
+                <option>2018</option>
+                <option>2017</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="dergiAdi" class="col-sm-2 control-label">Dergi Adı</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="dergiAdi" name="dergiAdi" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="konferans" class="col-sm-2 control-label">Konferans</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="konferans" name="konferans" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="cilt" class="col-sm-2 control-label">Cilt</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" id="cilt" name="cilt" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="sayi" class="col-sm-2 control-label">Sayi</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" id="sayi" name="sayi" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="sayfa" class="col-sm-2 control-label">Sayfa</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" id="sayfa" name="sayfa" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="doi" class="col-sm-2 control-label">DOİ</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="doi" name="doi" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default"
+                        style="color: white; color-rendering: auto; background-color: #428bca">Kaydet
+                </button>
+            </div>
+        </div>
+    </form>
+</nav>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
