--- a/src/main/resources/templates/addProject.html
+++ b/src/main/resources/templates/addProject.html
@@ -19,153 +19,151 @@
     <![endif]-->
 </head>
 <body>
-    <nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
-        <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
-             width="70" height="70" alt=""
-             style="margin-left: 10px; margin-right: 200px"/>
-        <h3 style="margin-top: -50px; margin-left: 600px; color: white">ARVED</h3>
-    </nav>
-    <nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
-        <div class="input-group rounded" style="width: 500px; margin: auto; margin-top: 15px">
-            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-                   aria-describedby="search-addon" />
-            <span class="input-group-text border-0" id="search-addon">
+<nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
+    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
+         width="70" height="70" alt=""
+         style="margin-left: 10px; margin-right: 200px"/>
+    <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: -60px">ARVED</p>
+    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
+         width="70" height="70" alt=""
+         style="margin-left: 1670px; margin-top: -80px"/>
+</nav>
+<nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
+    <div class="input-group rounded" style="width: 500px; margin: auto; margin-top: 15px">
+        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+               aria-describedby="search-addon" />
+        <span class="input-group-text border-0" id="search-addon">
                 <i class="fas fa-search"></i>
             </span>
-        </div>
-        <div class="dropdown" style="max-width: 400px; margin-top: -40px; margin-left: 1060px">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="true">
-                <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-                <span class="caret"></span>
+    </div>
+    <ul class="nav navbar" sec:authorize="isAuthenticated()" >
+        <form th:action="@{/logout}" method="post" style="max-width: 400px; margin-top: -35px; margin-left: 1660px">
+            <button class="btn btn-default" type="submit" value="Logout">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
+                    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
+                    <path fill-rule="evenodd"
+                          d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
+                </svg>
+                Çıkış
             </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <ul class="nav navbar" sec:authorize="isAuthenticated()" >
-                    <form th:action="@{/logout}" method="post">
-                        <button class="btn btn-default" type="submit" value="Logout">
-                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd"
-                                      d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
-                                <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
-                                <path fill-rule="evenodd"
-                                      d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
-                            </svg>
-                            Çıkış
-                        </button>
-                    </form>
-                </ul>
-            </ul>
-        </div>
-    </nav>
-
-    <nav class="navbar navbar-light" style="margin-top:15px; margin-left:200px; margin-right:200px; border-color: gainsboro">
-        <h4 style="margin-top: 30px; margin-left: 20px; margin-right: 20px; border-bottom-color: gainsboro; border-bottom-style: solid">Proje Bilgileri</h4>
-        <form class="form-horizontal" method="post" style="max-width:900px; margin-top: 80px; margin-left: auto; margin-right: auto">
-            <div class="form-group">
-                <label for="projeAdi" class="col-sm-2 control-label">Proje Adı</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="projeAdi" name="projeAdi" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="projeYurutucusu" class="col-sm-2 control-label">Proje Yürütücüsü</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="projeYurutucusu" name="projeYurutucusu" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="projeninAmaci" class="col-sm-2 control-label">Projenin Amacı</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="projeninAmaci" name="projeninAmaci" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="projeDurumu" class="col-sm-2 control-label">Proje Durumu</label>
-                <select class="form-control" id="projeDurumu" name="projeDurumu" style="max-width: 200px; margin-left: 10px">
-                    <option>Tamamlandı</option>
-                    <option>Devam Ediyor</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="kurumIciProje" class="col-sm-2 control-label">Kurum İçi Proje</label>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="kurumIciProje">
-                    <label class="form-check-label" for="kurumIciProje">
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="uluslararasiProje" class="col-sm-2 control-label">Uluslararası Proje</label>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="uluslararasiProje">
-                    <label class="form-check-label" for="uluslararasiProje">
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="projeTuru" class="col-sm-2 control-label">Proje Türü</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="projeTuru" name="projeTuru" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="alanBilgisi" class="col-sm-2 control-label">Alan Bilgisi</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="alanBilgisi" name="alanBilgisi" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="projeButcesi" class="col-sm-2 control-label">Proje Bütçesi</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" id="projeButcesi" name="projeButcesi" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="paraBirimi" class="col-sm-2 control-label">Para Birimi</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="paraBirimi" name="paraBirimi" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="kontratliProje" class="col-sm-2 control-label">Kontratlı Proje</label>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="kontratliProje">
-                    <label class="form-check-label" for="kontratliProje">
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="disDestekliProje" class="col-sm-2 control-label">Dış Destekli Proje</label>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="disDestekliProje">
-                    <label class="form-check-label" for="disDestekliProje">
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="uluslararasiIsbirlikliProje" class="col-sm-2 control-label">Uluslararası İşbirlikli Proje</label>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="uluslararasiIsbirlikliProje">
-                    <label class="form-check-label" for="uluslararasiIsbirlikliProje">
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="arastirmaciSayisi" class="col-sm-2 control-label">Araştırmacı Sayısı</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" id="arastirmaciSayisi" name="arastirmaciSayisi" placeholder="">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default"
-                            style="color: white; color-rendering: auto; background-color: #428bca">Kaydet
-                    </button>
-                </div>
-            </div>
         </form>
-    </nav>
+    </ul>
+</nav>
+
+<nav class="navbar navbar-light" style="margin-top:70px; margin-left:300px; margin-right:300px; border-color: gainsboro">
+    <h4 style="margin-top: 30px; margin-left: 20px; margin-right: 20px; border-bottom-color: gainsboro; border-bottom-style: solid">Proje Bilgileri</h4>
+    <form class="form-horizontal" method="post" style="max-width:900px; margin-top: 80px; margin-left: auto; margin-right: auto">
+        <div class="form-group">
+            <label for="projeAdi" class="col-sm-2 control-label">Proje Adı</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="projeAdi" name="projeAdi" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="projeYurutucusu" class="col-sm-2 control-label">Proje Yürütücüsü</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="projeYurutucusu" name="projeYurutucusu" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="projeninAmaci" class="col-sm-2 control-label">Projenin Amacı</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="projeninAmaci" name="projeninAmaci" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="projeDurumu" class="col-sm-2 control-label">Proje Durumu</label>
+            <select class="form-control" id="projeDurumu" name="projeDurumu" style="max-width: 200px; margin-left: 10px">
+                <option>Tamamlandı</option>
+                <option>Devam Ediyor</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="kurumIciProje" class="col-sm-2 control-label">Kurum İçi Proje</label>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="true" id="kurumIciProje">
+                <label class="form-check-label" for="kurumIciProje">
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="uluslararasiProje" class="col-sm-2 control-label">Uluslararası Proje</label>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="uluslararasiProje">
+                <label class="form-check-label" for="uluslararasiProje">
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="projeTuru" class="col-sm-2 control-label">Proje Türü</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="projeTuru" name="projeTuru" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="alanBilgisi" class="col-sm-2 control-label">Alan Bilgisi</label>
+            <select class="form-control" id="alanBilgisi" name="alanBilgisi" style="max-width: 200px; margin-left: 10px">
+                <option>FEN</option>
+                <option>SAĞLIK</option>
+                <option>SOSYAL</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="projeButcesi" class="col-sm-2 control-label">Proje Bütçesi</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" id="projeButcesi" name="projeButcesi" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="paraBirimi" class="col-sm-2 control-label">Para Birimi</label>
+            <select class="form-control" id="paraBirimi" name="paraBirimi" style="max-width: 200px; margin-left: 10px">
+                <option>TL</option>
+                <option>Dolar</option>
+                <option>Euro</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="kontratliProje" class="col-sm-2 control-label">Kontratlı Proje</label>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="kontratliProje">
+                <label class="form-check-label" for="kontratliProje">
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="disDestekliProje" class="col-sm-2 control-label">Dış Destekli Proje</label>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="disDestekliProje">
+                <label class="form-check-label" for="disDestekliProje">
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="uluslararasiIsbirlikliProje" class="col-sm-2 control-label">Uluslararası İşbirlikli Proje</label>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="uluslararasiIsbirlikliProje">
+                <label class="form-check-label" for="uluslararasiIsbirlikliProje">
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="arastirmaciSayisi" class="col-sm-2 control-label">Araştırmacı Sayısı</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" id="arastirmaciSayisi" name="arastirmaciSayisi" placeholder="">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default"
+                        style="color: white; color-rendering: auto; background-color: #428bca">Kaydet
+                </button>
+            </div>
+        </div>
+    </form>
+</nav>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
