--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,49 +18,52 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="container-fluid">
 
-    <nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
-        <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
-             width="70" height="70" alt=""
-             style="margin-left: 10px; margin-right: 200px"/>
-        <h3 style="margin-top: -50px; margin-left: 600px; color: white">ARVED</h3>
-    </nav>
-    <nav class="navbar navbar-light" style="margin-top:15px; margin-left:400px; margin-right:400px; border-color: gainsboro">
-        <form th:action="@{/login}" method="post" style="margin-top: 50px; margin-right: 50px; margin-left: 50px" >
-            <div th:if="${param.error}" class="alert alert-danger">Geçersiz eposta ya da şifre</div>
-            <div th:if="${param.logout}" class="alert alert-success">Çıkış Yapıldı</div>
-            <h3 style="margin-left: 150px">Giriş Yap</h3>
-            <div class="form-group">
-                <label for="email"></label>
-                <input type="text" class="form-control form-control-lg" id="email" name="email" autofocus="autofocus"
-                       placeholder="Email*"/> <br/>
-            </div>
-            <div class="form-group">
-                <label for="password"></label>
-                <input type="password" class="form-control form-control-lg" id="password" name="password"
-                       placeholder="Şifre*"/> <br/>
-            </div>
-            <button type="submit"
-                    style="margin-left:160px; color: white; color-rendering: auto; background-color: #428bca"
-                    class="btn btn-default">Giriş Yap
-            </button>
-            <h1></h1>
-            <div>
-                <ul class="nav nav-tabs" >
-                    <li role="presentation"><a href="/registration">Hesabınız yok mu? Kaydolun</a></li>
-                </ul>
-            </div>
-        </form>
-    </nav>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"
-            integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
-            crossorigin="anonymous"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-            integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-            crossorigin="anonymous"></script>
+<nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
+    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
+         width="70" height="70" alt=""
+         style="margin-left: 10px; margin-right: 200px"/>
+    <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: -60px">ARVED</p>
+    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
+         width="70" height="70" alt=""
+         style="margin-left: 1670px; margin-top: -80px"/>
+</nav>
+<nav class="navbar navbar-light" style="margin-top:70px; margin-left:600px; margin-right:600px; border-color: gainsboro">
+    <form th:action="@{/login}" method="post" style="margin-top: 50px; margin-right: 50px; margin-left: 50px" >
+        <div th:if="${param.error}" class="alert alert-danger">Geçersiz eposta ya da şifre</div>
+        <div th:if="${param.logout}" class="alert alert-success">Çıkış Yapıldı</div>
+        <h3 style="margin-left: 180px">Giriş Yap</h3>
+        <div class="form-group">
+            <label for="email"></label>
+            <input type="text" class="form-control form-control-lg" id="email" name="email" autofocus="autofocus"
+                   placeholder="Email*"/> <br/>
+        </div>
+        <div class="form-group">
+            <label for="password"></label>
+            <input type="password" class="form-control form-control-lg" id="password" name="password"
+                   placeholder="Şifre*"/> <br/>
+        </div>
+        <button type="submit"
+                style="margin-left:190px; color: white; color-rendering: auto; background-color: #428bca"
+                class="btn btn-default">Giriş Yap
+        </button>
+        <h1></h1>
+        <div>
+            <ul class="nav nav-tabs" >
+                <li role="presentation"><a href="/registration">Hesabınız yok mu? Kaydolun</a></li>
+            </ul>
+        </div>
+    </form>
+</nav>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
+        crossorigin="anonymous"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
